[gd_scene load_steps=3 format=3 uid="uid://brri3hsu4od12"]

[ext_resource type="Script" path="res://objects/interaction_area.gd" id="1_eh1x2"]

[sub_resource type="BoxShape3D" id="BoxShape3D_3ohru"]

[node name="Interactable" type="Node3D"]
script = ExtResource("1_eh1x2")

[node name="Interactable_Area" type="Area3D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape3D" type="CollisionShape3D" parent="Interactable_Area"]
shape = SubResource("BoxShape3D_3ohru")

[connection signal="body_entered" from="Interactable_Area" to="Interactable_Area" method="_on_body_entered"]
[connection signal="body_exited" from="Interactable_Area" to="Interactable_Area" method="_on_body_exited"]
